refector: sprint2 미션