@@ -1,100 +1,93 @@
 package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.Channel;
+import com.sprint.mission.discodeit.entity.User;
 import com.sprint.mission.discodeit.repository.ChannelRepository;
 
 import java.io.*;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class FileChannelRepository implements ChannelRepository {
-    private final Path DIRECTORY;
-    private final String EXTENSION = ".ser";
+
+    private static final String FILE_PATH = "tmp/channel.ser";
+    private final Map<User, List<Channel>> channelData;
+
+
 
     public FileChannelRepository() {
-        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), "file-data-map", Channel.class.getSimpleName());
-        if (Files.notExists(DIRECTORY)) {
-            try {
-                Files.createDirectories(DIRECTORY);
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        }
-    }
-
-    private Path resolvePath(UUID id) {
-        return DIRECTORY.resolve(id + EXTENSION);
+        this.channelData = loadFromFile();
     }
 
     @Override
     public Channel save(Channel channel) {
-        Path path = resolvePath(channel.getId());
-        try (
-                FileOutputStream fos = new FileOutputStream(path.toFile());
-                ObjectOutputStream oos = new ObjectOutputStream(fos)
-        ) {
-            oos.writeObject(channel);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
+        List<Channel> channels = new ArrayList<>();
+        channels.add(channel);
+        channelData.put(channel.getUser(), channels);
+        saveToFile();
         return channel;
     }
 
     @Override
     public Optional<Channel> findById(UUID id) {
-        Channel channelNullable = null;
-        Path path = resolvePath(id);
-        if (Files.exists(path)) {
-            try (
-                    FileInputStream fis = new FileInputStream(path.toFile());
-                    ObjectInputStream ois = new ObjectInputStream(fis)
-            ) {
-                channelNullable = (Channel) ois.readObject();
-            } catch (IOException | ClassNotFoundException e) {
-                throw new RuntimeException(e);
-            }
-        }
-        return Optional.ofNullable(channelNullable);
+        return Optional.ofNullable(channelData.values().stream()
+                .flatMap(List::stream)
+                .filter(channel -> channel.getId().equals(id))
+                .findFirst()
+                .orElseThrow(() -> new IllegalArgumentException("Not found Channel ")));
     }
 
     @Override
     public List<Channel> findAll() {
-        try {
-            return Files.list(DIRECTORY)
-                    .filter(path -> path.toString().endsWith(EXTENSION))
-                    .map(path -> {
-                        try (
-                                FileInputStream fis = new FileInputStream(path.toFile());
-                                ObjectInputStream ois = new ObjectInputStream(fis)
-                        ) {
-                            return (Channel) ois.readObject();
-                        } catch (IOException | ClassNotFoundException e) {
-                            throw new RuntimeException(e);
-                        }
-                    })
-                    .toList();
-        } catch (IOException e) {
-            throw new RuntimeException(e);
+        return channelData.values().stream()
+                .flatMap(List::stream)
+                .collect(Collectors.toList());
+    }
+
+
+    @Override
+    public void deleteByChannel(Channel channel) {
+        List<Channel> channels = channelData.get(channel.getUser());
+        if(channels != null) {
+            channels.remove(channel);
+            if(channels.isEmpty()) {
+                channelData.remove(channel.getUser());
+            }
+            saveToFile();
         }
     }
 
-    @Override
-    public boolean existsById(UUID id) {
-        Path path = resolvePath(id);
-        return Files.exists(path);
-    }
 
     @Override
-    public void deleteById(UUID id) {
-        Path path = resolvePath(id);
-        try {
-            Files.delete(path);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
+    public boolean existsByUser(User user) {
+        return channelData.values().stream()
+                .flatMap(List::stream)
+                .anyMatch(channel -> channel.getUser().equals(user));
+    }
+
+    private Map<User, List<Channel>> loadFromFile() {
+        File file = new File(FILE_PATH);
+        if (!file.exists()) {
+            return new HashMap<>();
+        }
+        try (ObjectInputStream ois =
+                     new ObjectInputStream(new FileInputStream(file))) {
+            return (Map<User, List<Channel>>) ois.readObject();
+        } catch (IOException | ClassNotFoundException e) {
+            System.out.println(e.getMessage());
+            return new HashMap<>();
         }
     }
+
+    private void saveToFile() {
+        try (ObjectOutputStream oos
+                     = new ObjectOutputStream(new FileOutputStream(FILE_PATH))) {
+            oos.writeObject(channelData);
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to save channel to file.", e);
+        }
+
+    }
+
+
 }
